Fixed video alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  background-color: #31afec;
+  background-color: #49b9ea;
   padding: 0;
   margin: 0;
 }
